fixed text overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -182,7 +182,7 @@ p{
 
 }
 .movie_info{
-  height: 100vh;
+  min-height: 100vh;
   padding: 5%;
 //  width: 100%;
   display: flex;
@@ -241,6 +241,7 @@ justify-content: center;
 
   }
   .content{
+min-height: auto;
     z-index: 0;
     // z-index: 99;
     .title{
